gloo/docs/gloo_routing/virtual_services/authentication/plugin_auth/vs-echo-with-auth.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: echo
  namespace: gloo-system
spec:
  displayName: echo
  virtualHost:
    domains:
    - '*'
    name: gloo-system.echo
    routes:
    - matcher:
        prefix: /echo
      routeAction:
        single:
          upstream:
            name: default-http-echo-5678
            namespace: gloo-system
    virtualHostPlugins:
      extensions:
        configs:
          extauth:
            plugin_auth:
              plugins:
              - config:
                  RequiredHeader: my-header
                name: RequiredHeader
                plugin_file_name: RequiredHeader.so
                exported_symbol_name: Plugin
